--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.2",
     "react-scripts": "5.0.0",
+    "use-double-click": "^1.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
